Fix navbar ul alignment for <600px

--- a/assets/style.css
+++ b/assets/style.css
@@ -611,6 +611,7 @@
 
         #navbar>ul {
             justify-content: center;
+            margin-right: 0px;
         }
 
         #navbar li {
